--- a/Code/borr_y1_habitat/seed_behavior.Rmd
+++ b/Code/borr_y1_habitat/seed_behavior.Rmd
@@ -138,7 +138,12 @@ germ_rate1_gg<-ggplot(germ_rate1,#making a graph with ggplot using germ_rate1 da
                           shape=PlotTreatment))+ #how shapes should be assigned
   geom_line(linewidth=0.5)+ #now we make the line
   geom_point(aes(size=type))+ #now we add the data points
-  theme_classic(base_size=16)+ #classic theme and base_size is the font size for labels
+  theme_bw(base_size=16)+ #classic theme and base_size is the font size for labels
+  theme(panel.border=element_blank(),
+        panel.grid.major=element_blank(),
+        panel.grid.minor=element_blank(),
+        axis.line=element_line(colour="black"),
+        legend.position = c(0.7, 0.4))+
   scale_y_continuous(name="Proportion Germinated", #y-axis: title
                      limits=c(0,1), #y-axis: range
                      breaks=c(0.0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0))+ #y-axis: manual incremental breaks
@@ -236,7 +241,8 @@ germ_int_all_gg<-ggplot(data=germ_rate3,
   theme(panel.border=element_blank(),
         panel.grid.major=element_blank(),
         panel.grid.minor=element_blank(),
-        axis.line=element_line(colour="black"))+
+        axis.line=element_line(colour="black"),
+        legend.position = c(0.8, 0.4))+
   scale_y_continuous(name="Proportion Germinated",
                      limits=c(0,1),
                      breaks=c(0.0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0))+
