--- a/Code/borr_y1_habitat/greenhouse_competition.Rmd
+++ b/Code/borr_y1_habitat/greenhouse_competition.Rmd
@@ -3,25 +3,61 @@ title: "Response to Soil Type and Competition"
 output: html_notebook
 date: December 2022
 authors: Miranda Melen, Laura Goetz
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
+
 #Background
-We used a two-way factorial design with construction soil and natural soil and three competition treatments (D. graveolens grown alone, with Bromus hordeaceus, or with Festuca perennis). These grasses were selected because they are commonly found in California annual grasslands and were identified in many of the 8 paired sites. We collected B. hordeaceus seeds from Blue Oak Ranch Reserve and F. perennis seeds from the Terrace Lands of Younger Lagoon Reserve on the UCSC Coastal Science Campus.
+We used a two-way factorial design with construction soil
+and natural soil and three competition treatments (*Dittrichia
+graveolens* grown alone, with *Bromus hordeaceus*, or with *Festuca
+perennis*). These grasses were selected because they are commonly found
+in California annual grasslands and were identified in many of the 8
+paired sites. We collected *B. hordeaceus* seeds from Blue Oak Ranch
+Reserve and *F. perennis* seeds from the Terrace Lands of Younger Lagoon
+Reserve on the UCSC Coastal Science Campus.
 
-Every pot had either one D. graveolens with one B. hordeaceus or one with F. perennis, or no grass competitor (grown alone). We prepared Deepots (D16; 5cm diameter, 18cm height) at the UCSC Coastal Science Campus Greenhouse and filled with rehydrated soil: 384 pots were filled with natural soil, and 384 with construction soil (768 pots total).
+Every pot had either one *D. graveolens* with one *B. hordeaceus* or one
+with *F. perennis*, or no grass competitor (grown alone). We prepared
+Deepots (D16; 5cm diameter, 18cm height) at the UCSC Coastal Science
+Campus Greenhouse and filled with rehydrated soil: 384 pots were filled
+with natural soil, and 384 with construction soil (768 pots total).
 
-We germinated D. graveolens seeds in an incubation chamber with a daytime temperature of 23ºC from 9AM-1AM and a nighttime temperature of 19ºC from 1AM-9AM. Grasses were germinated in trays with potting mix and placed under fluorescent light banks for 16-hour length days and 8-hour length nights. Once radicles and cotyledons emerged, seedlings were transplanted in sets of six (one for each treatment) and then randomized into a blocked design.
+We germinated *D. graveolens* seeds in an incubation chamber with a
+daytime temperature of 23ºC from 9AM-1AM and a nighttime temperature of
+19ºC from 1AM-9AM. Grasses were germinated in trays with potting mix and
+placed under fluorescent light banks for 16-hour length days and 8-hour
+length nights. Once radicles and cotyledons emerged, seedlings were
+transplanted in sets of six (one for each treatment) and then randomized
+into a blocked design.
 
-After 4 months, we measured grass height from the soil surface to the longest tip of each grass bundle and measured D. graveolens leaf length from stem node to leaf tip of the longest newest true leaf to obtain an accurate estimate of the rosette size. We then harvested aboveground biomass at the crown and dried it in a 60ºC oven for 3 days before weighing it. 
+After 4 months, we measured grass height from the soil surface to the
+longest tip of each grass bundle and measured *D. graveolens* leaf
+length from stem node to leaf tip of the longest newest true leaf to
+obtain an accurate estimate of the rosette size. We then harvested
+aboveground biomass at the crown and dried it in a 60ºC oven for 3 days
+before weighing it.
 
-#Data Analysis
-Statistical analyses were performed in R version 4.2.1 (R Core Team 2022) using a two-way factorial ANOVA to test for the effects of soil and of competition on D. graveolens biomass. We used a post-hoc Tukey test to compare the three competitive treatments (grown alone, with B. hordeaceus, and with F. perennis) for each soil type separately. We also quantified the response of D. graveolens to the biomass of each competitor using linear regression models.
- 
-We tested for a difference between roadside and adjacent vegetation habitat types on each soil type independently, using mixed-model ANOVA, with site as a random effect and habitat (roadside or adjacent vegetation) as a fixed effect. Biomass of both D. graveolens and the grass competitors was ln-transformed before analysis.
+#Data Analysis 
+Statistical analyses were performed in R version 4.2.1 (R
+Core Team 2022) using a two-way factorial ANOVA to test for the effects
+of soil and of competition on *D. graveolens* biomass. We used a
+post-hoc Tukey test to compare the three competitive treatments (grown
+alone, with *B. hordeaceus*, and with *F. perennis*) for each soil type
+separately. We also quantified the response of *D. graveolens* to the
+biomass of each competitor using linear regression models.
+
+We tested for a difference between roadside and adjacent vegetation
+habitat types on each soil type independently, using mixed-model ANOVA,
+with site as a random effect and habitat (roadside or adjacent
+vegetation) as a fixed effect. Biomass of both *D. graveolens* and the
+grass competitors was ln-transformed before analysis.
 
 ##Models Included
 
-
 #Libraries
+
 ```{r}
 #install.packages("ggplot2")
 #install.packages("tidyverse")
@@ -45,8 +81,12 @@ library(patchwork)
 library(Sleuth2)
 ```
 
-#Load Data
-This dataframe has one row per pot (768 observations). Data are Dittrichia_biomass and Grass_biomass, both measured in grams, and DittrichiaLLL_mm_3 which is the longest leaf length in mm. NAs in  columns are "no data" because there was no grass present in that pot at the time of measurement.
+#Load Data This dataframe has one row per pot (768 observations). Data
+are Dittrichia_biomass and Grass_biomass, both measured in grams, and
+DittrichiaLLL_mm_3 which is the longest leaf length in mm. NAs in
+columns are "no data" because there was no grass present in that pot at
+the time of measurement.
+
 ```{r}
 mydata<-read.csv("/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/data/greenhouse_competition/greenhouse_competition.csv",stringsAsFactors=T)
 # change "NA" to "0"
@@ -58,6 +98,7 @@ str(mydata) #Check that each column has the right class (factor, integer, numeri
 #Dittrichia Biomass
 
 ##Histograms
+
 ```{r}
 #Dittrichia biomass
 hist(mydata1$Dittrichia_biomass,col='steelblue',main='Original')
@@ -72,15 +113,19 @@ ggplot(mydata1,aes(x=Grass_biomass))+
   facet_wrap(vars(Soil))
 ```
 
-Data is skewed, so let's try log transforming. However, the values are all <0 which create negative numbers when log transforming, therefore we need to multiply to move the decimal and then check the data again.
+Data is skewed, so let's try log transforming. However, the values are
+all \<0 which create negative numbers when log transforming, therefore
+we need to multiply to move the decimal and then check the data again.
 
 ```{r}
 #Prepare data for log transform (doing ln and log10)
 log_mydata<-mydata1%>% 
-  mutate(Dittrichia_biomass10000=Dittrichia_biomass*10000,Grass_biomass10000=Grass_biomass*10000)%>% 
+  mutate(Dittrichia_biomass1000=Dittrichia_biomass*1000,Grass_biomass1000=Grass_biomass*1000)%>% 
   filter(Dittrichia_biomass!=0)%>% 
-  mutate(log_Dittrichia=log10(Dittrichia_biomass10000))%>%
-  mutate(log_Grass=log10(Grass_biomass10000))
+  mutate(log_Dittrichia=log10(Dittrichia_biomass1000))%>%
+  mutate(log_Grass=log10(Grass_biomass1000))%>% 
+  mutate(log_DittrichiaO=log10(Dittrichia_biomass))%>%
+  mutate(log_GrassO=log10(Grass_biomass))
 
 hist(log_mydata$log_Dittrichia,col='steelblue',main='Original')
 shapiro.test(log_mydata$log_Dittrichia) #does not improve with log transform
@@ -94,15 +139,16 @@ shapiro.test(log_mydata$log_Grass) #does not compute?
 
 ###Risk Assessment
 
-##ggplot
-###Biomass x Competition and Soil
+##ggplot ###Biomass x Competition and Soil
 
-####Interaction Plot
-Note: 10 blocks, 5 treatments, 16 populations (CHE-O), 8 sites (random: population pairs; CHE), 2 habitat (fixed effect: roadside and off-road; R or O)
+####Interaction Plot Note: 10 blocks, 5 treatments, 16 populations
+(CHE-O), 8 sites (random: population pairs; CHE), 2 habitat (fixed
+effect: roadside and off-road; R or O)
 
 All data combined.
 
 #####Biomass vs. Competition: Construction soil
+
 ```{r eval=FALSE, include=FALSE}
 pd<-position_dodge(0)
 
@@ -145,7 +191,9 @@ comp_int_bio_con_gg
 
 ggsave(plot=comp_int_bio_con_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/comp_int_bio_con_gg.png",width=25,height=20,units="cm",dpi=800)
 ```
+
 #####Biomass vs. Competition: Field soil
+
 ```{r eval=FALSE, include=FALSE}
 pd<-position_dodge(0)
 
@@ -188,8 +236,10 @@ comp_int_bio_field_gg
 
 ggsave(plot=comp_int_bio_field_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/comp_int_bio_field_gg.png",width=25,height=20,units="cm",dpi=800)
 ```
-#####Biomass vs. Competition: Both Soils
-Let's try putting both soil types together here and using the log10 data.
+
+#####Biomass vs. Competition: Both Soils Let's try putting both soil
+Soil types together here and using the log10 data and µg as my units.
+
 ```{r}
 pd<-position_dodge(0)
 
@@ -201,11 +251,11 @@ comp_int_bio_all<-log_mydata%>%
   mutate(SE=SD/sqrt(N))
 
 comp_int_bio_all_gg<-ggplot(data=comp_int_bio_all,
-                        aes(x=factor(Competition,levels=c("None","Festuca","Bromus")),
+                        aes(x=factor(Competition,levels=c("None","Bromus","Festuca")),
                             y=Mean))+
-  scale_y_continuous(expression(atop(italic("Dittrichia graveolens")~biomass, (log[10](gx10^4)))),
-                     limits=c(0,4), #y-axis: range
-                     breaks=seq(0,4,1))+ #y-axis: incremental breaks by giving range and requesting a sequence by 1
+  scale_y_continuous(expression(atop(italic("Dittrichia graveolens")~biomass, (log[10](mg)))),
+                     limits=c(-1,3), #y-axis: range
+                     breaks=seq(-1,3,1))+ #y-axis: incremental breaks by giving range and requesting a sequence by 1
   xlab("")+
   ggtitle("")+
   theme_classic(base_size=16)+
@@ -236,8 +286,55 @@ comp_int_bio_all_gg
 ggsave(plot=comp_int_bio_all_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/comp_int_bio_all_gg.png",width=25,height=15,units="cm",dpi=800)
 ```
 
-#####Boxplot
-Not using
+Soil types together here too and using the log10 data on g
+```{r}
+pd<-position_dodge(0)
+
+comp_int_bio_all<-log_mydata%>% 
+  group_by(Soil,Competition,Habitat)%>%
+  summarise(Mean=mean(log_DittrichiaO),
+            SD=sd(log_DittrichiaO),
+            N=length(log_DittrichiaO))%>%
+  mutate(SE=SD/sqrt(N))
+
+comp_int_bio_all_gg<-ggplot(data=comp_int_bio_all,
+                        aes(x=factor(Competition,levels=c("None","Festuca","Bromus")),
+                            y=Mean))+
+  scale_y_continuous(expression(atop(italic("Dittrichia graveolens")~biomass, (log[10](g)))),
+                     limits=c(-4,0), #y-axis: range
+                     breaks=seq(-4,0,1))+ #y-axis: incremental breaks by giving range and requesting a sequence by 1
+  xlab("")+
+  ggtitle("")+
+  theme_classic(base_size=16)+
+  # theme(panel.border=element_blank(),
+  #       panel.grid.major=element_blank(),
+  #       panel.grid.minor=element_blank(),
+  #       axis.line=element_line(colour="black"))+ 
+  geom_line(size=1,
+            position=pd,
+            aes(linetype=Soil,
+                group=interaction(Soil,Habitat),
+                color=Habitat))+
+  geom_point(size=5,
+             position=pd,
+             aes(shape=Habitat,
+                 color=Habitat))+
+  scale_color_manual(values=c("gray85","forestgreen"))+
+  geom_errorbar(width=0.15,
+                position=pd,
+                aes(ymin=(Mean-SE),
+                    ymax=(Mean+SE),
+                    color=Habitat))+
+  labs(color="Source Habitat",
+       shape="Source Habitat",
+       linetype="Soil Type")
+comp_int_bio_all_gg
+
+ggsave(plot=comp_int_bio_all_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/comp_int_bio_all_gg.png",width=25,height=15,units="cm",dpi=800)
+```
+
+#####Boxplot Not using
+
 ```{r eval=FALSE, include=FALSE}
 competition1_gg<-ggplot(log_mydata)+
   geom_boxplot(aes(x=Competition, 
@@ -255,8 +352,9 @@ ggsave(plot=competition1_gg,file="/Users/Miranda/Documents/Education/UC Santa Cr
 ###Biomass x Competition and Soil and Population
 
 #### Interaction Plots
-Not used
-Plot by site.
+
+Not used Plot by site.
+
 ```{r eval=FALSE, include=FALSE}
 mydata_site_sum<-log_mydata%>%
   group_by(Habitat,Soil,Site)%>%
@@ -323,8 +421,8 @@ comp_int_site_panel_gg<-ggplot(data=mydata_site_sum,
 #comp_int_site_panel_gg
 ```
 
-####Boxplots
-Not using
+####Boxplots Not using
+
 ```{r eval=FALSE, include=FALSE}
 competition2_gg<-ggplot(log_mydata)+
   geom_boxplot(aes(x=Soil,
@@ -339,13 +437,14 @@ competition2_gg<-ggplot(log_mydata)+
 ```
 
 ## Biomass Scatterplot
+Using original data with negatives
 ```{r}
 #Prep data for scatterplot
 comp_scatter<-log_mydata%>% 
   filter(Competition!="None")%>%
   filter(Grass_biomass!=0)%>% 
-  mutate(scx=log(Grass_biomass10000),
-         scy=log(Dittrichia_biomass10000))%>% 
+  mutate(scx=log(Grass_biomass),
+         scy=log(Dittrichia_biomass))%>% 
   mutate(type=paste(Soil,Competition,sep="/"))
 
 #Make the scatterplot
@@ -355,12 +454,12 @@ comp_scatter_gg<-ggplot(comp_scatter)+
     y=scy,
     shape=type,
     color=Habitat))+
-  scale_y_continuous(expression(atop(italic("Dittrichia graveolens")~biomass, (log[10](gx10^4)))),
-                     limits=c(0,7), #y-axis: range
-                     breaks=seq(0,7,1))+ #y-axis: incremental breaks by giving range and requesting a sequence by 1
-  scale_x_continuous(expression("Grass"~biomass ~""~(log[10](gx10^4))),
-                     limits=c(2,11), #x-axis: range
-                     breaks=seq(2,11,1))+ #x-axis: incremental breaks by giving range and requesting a sequence by 1
+  scale_y_continuous(expression(atop(italic("Dittrichia graveolens")~biomass, (log[10](g)))),
+                     limits=c(-9,-2), #y-axis: range
+                     breaks=seq(-9,-2,1))+ #y-axis: incremental breaks by giving range and requesting a sequence by 1
+  scale_x_continuous(expression("Grass"~biomass ~""~(log[10](g))),
+                     limits=c(-7,2), #x-axis: range
+                     breaks=seq(-7,2,1))+ #x-axis: incremental breaks by giving range and requesting a sequence by 1
   guides(fill=none)+
   scale_color_manual(values=c("gray85","forestgreen"))+
   scale_shape_manual(values=c(1,19,2,17))+
@@ -385,9 +484,55 @@ ggsave(plot=comp_scatter_gg,file ="/Users/Miranda/Documents/Education/UC Santa C
 ```
 
 
+```{r}
+#Prep data for scatterplot
+comp_scatter<-log_mydata%>% 
+  filter(Competition!="None")%>%
+  filter(Grass_biomass!=0)%>% 
+  mutate(scx=log(Grass_biomass1000),
+         scy=log(Dittrichia_biomass1000))%>% 
+  mutate(type=paste(Soil,Competition,sep="/"))
+
+#Make the scatterplot
+comp_scatter_gg<-ggplot(comp_scatter)+
+  geom_point(aes(
+    x=scx,
+    y=scy,
+    shape=type,
+    color=Habitat))+
+  scale_y_continuous(expression(atop(italic("Dittrichia graveolens")~biomass, (log[10](mg)))),
+                     limits=c(-2,5), #y-axis: range
+                     breaks=seq(-2,5,1))+ #y-axis: incremental breaks by giving range and requesting a sequence by 1
+  scale_x_continuous(expression("Grass"~biomass ~""~(log[10](mg))),
+                     limits=c(0,9), #x-axis: range
+                     breaks=seq(0,9,1))+ #x-axis: incremental breaks by giving range and requesting a sequence by 1
+  guides(fill=none)+
+  scale_color_manual(values=c("gray85","forestgreen"))+
+  scale_shape_manual(values=c(1,19,2,17))+
+  geom_smooth(method=lm,
+              aes(x=scx,
+                  y=scy,
+                  linetype=Soil),
+              color="black")+
+  theme_classic(base_size=16)+
+  theme(panel.border=element_blank(),
+        panel.grid.major=element_blank(),
+        panel.grid.minor=element_blank(),
+        axis.line=element_line(colour="black"))+
+  labs(y="Dittrichia graveolens biomass (log(g10^4))",
+       x="Grass biomass (log(g10^4))",
+       shape="Soil Type/Competition Species",
+       color="Source Habitat",
+       linetype="")
+comp_scatter_gg
+
+ggsave(plot=comp_scatter_gg,file ="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/comp_scatter_gg.png",width=25,height=15,units="cm",dpi=800)
+```
+
 #Dittrichia Growth
 
-Here we need to filter the data to only look at plant growth > 0
+Here we need to filter the data to only look at plant growth \> 0
+
 ```{r}
 mydata_Dgrowth<-mydata%>%filter(DittrichiaLLL_mm_3>0) #Here I am only looking at the Dittrichia growth data that is greater than 0
 #mydata_Ggrowth<-mydata%>%filter(GrassHeight_cm_3>0) #Here I am only looking at the Dittrichia growth data that is greater than 0
@@ -401,6 +546,7 @@ hist(mydata_Dgrowth$DittrichiaLLL_mm_3,col='steelblue',main='Original')
 ```
 
 Data is skewed, so let's try log transforming.
+
 ```{r}
 #Prepare data for log transform
 log_mydata_Dgrowth<-mydata_Dgrowth%>% 
@@ -411,19 +557,17 @@ hist(log_mydata_Dgrowth$log_Dgrowth,col='steelblue',main='Original')
 shapiro.test(log_mydata_Dgrowth$log_Dgrowth) #does not improve with log transform
 ```
 
+##Model ###Best Model ###Risk Assessment ##ggplot ###Growth Rate x
+Competition and Soil
 
-##Model
-###Best Model
-###Risk Assessment
-##ggplot
-###Growth Rate x Competition and Soil
-
-####Interaction Plot
-Note: 10 blocks, 5 treatments, 16 populations (CHE-O), 8 sites (random: population pairs; CHE), 2 habitat (fixed effect: roadside and off-road; R or O)
+####Interaction Plot Note: 10 blocks, 5 treatments, 16 populations
+(CHE-O), 8 sites (random: population pairs; CHE), 2 habitat (fixed
+effect: roadside and off-road; R or O)
 
 All data combined.
 
 #####Growth Rate vs. Competition: Construction soil
+
 ```{r eval=FALSE, include=FALSE}
 pd<-position_dodge(0)
 
@@ -465,6 +609,7 @@ ggsave(plot=comp_int_grow_con_gg,file="/Users/Miranda/Documents/Education/UC San
 ```
 
 #####Growth Rate vs. Competition: Field soil
+
 ```{r eval=FALSE, include=FALSE}
 pd<-position_dodge(0.1)
 
