--- a/Code/borr_y1_habitat/seed_behavior.Rmd
+++ b/Code/borr_y1_habitat/seed_behavior.Rmd
@@ -2,7 +2,8 @@
 title: "Seed Behavior"
 output: html_notebook
 date: March 2023
-authors: Miranda Melen, Laura Goetz, Nicky Lustenhouwer
+author: Miranda Melen
+contributors: Laura Goetz, Matt Kustra, Julia Harenčár, and Nicky Lustenhouwer
 ---
 #Background
 The dataset cox_germ_soil8-2-21.csv has germination rate and germination success data from an experiment conducted at UCSC greenhouses in 2021. Seed was sources from two Habitat types (roadside and soils away from roads), and Treatments were two soil types sourced from UCSC.
@@ -114,9 +115,9 @@ exp(ranef(fullmodel2)$Site) # Pretty even among all the sites
 ```
 
 #ggplot
-##Proportion Germinated x Time with Habitat and Treatment (all data pooled)
+##Proportion Germinated x Time with Habitat and Treatment (all data pooled) - not used
 
-```{r eval=FALSE, include=FALSE}
+```{r}
 #we want the graph to start at zero, but the data starts on day 2, so here we create fake data for the line to use
 fakedata1<-data.frame(Habitat=c("Vegetated","Roadside","Vegetated","Roadside"),
                       Treatment=c("Construction Soil","Field Soil","Field Soil","Construction Soil"),
@@ -157,25 +158,24 @@ germ_rate1_gg<-ggplot(germ_rate1,#making a graph with ggplot using germ_rate1 da
   scale_size_manual(values=c(0,5), #second number controls the size of the point
                     guide="none")+
   scale_color_manual(values=c("gray85","gray85","forestgreen","forestgreen"))+ #colors assigned in order of the legend
+  scale_shape_manual(values=c(19,17,19,17))+
   labs(y="Proportion Germinated",
        fill="Source Habitat/Soil Type",
        color="Source Habitat/Soil Type",
        shape="Source Habitat/Soil Type")
 germ_rate1_gg
 
-ggsave(plot=germ_rate1_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_rate1_gg.png",width=25,height=15,units="cm",dpi=800)
+#ggsave(plot=germ_rate1_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_rate1_gg.png",width=25,height=15,units="cm",dpi=800)
 ```
 
 ##Proportion Germinated x Time with Habitat and Treatment (data pooled by dish)
 
 ```{r}
-#I have 160 dishes (DishNum) with 10 seeds germinating on different days, 4 treatments (PlotTreatment), so 40 reps for each PlotTreatment... the average of those 40 reps should be plotted with the errorbars using the global mean
-
-mydata3<-mydata%>%
+mydata1<-mydata%>%
   filter(DaysToGerm!=0)%>% #our real data has some zeros because some seeds didn't germinate, but we need those to be removed since they are not real zeros
   mutate(type=c("real")) #here we add a column identifies our real
 
-germ_rate4<-mydata3%>% 
+germ_rate1.0<-mydata1%>% 
   group_by(DishNum,GermDate,Habitat,Treatment,DaysToGerm)%>%
   summarize(NumGerm=n(),PropGerm=NumGerm/10)%>% 
   mutate(PlotTreatment=paste(Habitat,Treatment,sep="/"))%>% #create a new column called PlotTreatment combining Habitat and Treatment with a / to separate
@@ -183,28 +183,30 @@ germ_rate4<-mydata3%>%
   mutate(CumPropGerm=cumsum(PropGerm))
 
 #make empty data frame to fill with closest or actual number
-germ_rate5<-data.frame(PlotTreatment="blank",
+germ_rate1.1<-data.frame(PlotTreatment="blank",
                       DaysToGerm=c(rep(seq(1,12,1),40)),
                       DishNum=rep(seq(1,160,1),each=12),
-                      PropGerm=0,CumPropGerm=0)%>% #CANNOT DO THIS!!! WRONG TO HAVE THESE PIPE TOGETHER
-  filter(germ_rate5$DishNum%in%germ_rate4$DishNum) #actually prefilter dish numbers
+                      PropGerm=0,CumPropGerm=0)
+
+germ_rate1.1<-germ_rate1.1%>%
+  filter(germ_rate1.1$DishNum%in%germ_rate1.0$DishNum) #actually prefilter dish numbers
 
 #for loop to fill in missing data, may take a bit, warnings are just about making empty data frame
-for (i in 1:nrow(germ_rate5)){
+for (i in 1:nrow(germ_rate1.1)){
   #first check if the dish number is in the data set
-  if(germ_rate5$DishNum[i]%in%germ_rate4$DishNum){
+  if(germ_rate1.1$DishNum[i]%in%germ_rate1.0$DishNum){
     #make temporary data frame of the data set of dish
-    temp<-germ_rate4%>%
-      filter(DishNum==germ_rate5$DishNum[i])%>%#first filter for the right dish
-      mutate(diff=DaysToGerm-as.numeric(germ_rate5$DaysToGerm[i]))
+    temp<-germ_rate1.0%>%
+      filter(DishNum==germ_rate1.1$DishNum[i])%>%#first filter for the right dish
+      mutate(diff=DaysToGerm-as.numeric(germ_rate1.1$DaysToGerm[i]))
     #now filter for specific day
     filltemp<-temp%>% #subtract day
       filter(diff<=0)%>% #filter for either earlier or same day
       filter(diff==max(diff))#filter for exact match or closest
     if(nrow(filltemp)>0){#check if it is empty data frame, meaning no close day
-      germ_rate5[i,]<-c(filltemp$PlotTreatment,germ_rate5$DaysToGerm[i],germ_rate5$DishNum[i],filltemp$PropGerm,filltemp$CumPropGerm)
+      germ_rate1.1[i,]<-c(filltemp$PlotTreatment,germ_rate1.1$DaysToGerm[i],germ_rate1.1$DishNum[i],filltemp$PropGerm,filltemp$CumPropGerm)
     }else{
-    germ_rate5[i,]<-c(temp$PlotTreatment[1],germ_rate5$DaysToGerm[i],germ_rate5$DishNum[i],0,0)
+    germ_rate1.1[i,]<-c(temp$PlotTreatment[1],germ_rate1.1$DaysToGerm[i],germ_rate1.1$DishNum[i],0,0)
   }}
   else{#if there is no data for the dish just skip.
     next
@@ -212,44 +214,47 @@ for (i in 1:nrow(germ_rate5)){
 }
 
 #we want the graph to start at zero, but the data starts on day 2, so here we create fake data for the line to use
-fakedata3<-data.frame(PlotTreatment=c("Roadside/Construction Soil","Roadside/Field Soil","Vegetated/Construction Soil","Vegetated/Field Soil"),
+fakedata1<-data.frame(PlotTreatment=c("Roadside/Construction Soil","Roadside/Field Soil","Vegetated/Construction Soil","Vegetated/Field Soil"),
                       DaysToGerm=c(0),
                       DishNum=c(0),
                       PropGerm=c(0),
                       CumPropGerm=c(0),
                       type=c("fake"))
 
-fakedata3$DaysToGerm<-as.character(fakedata3$DaysToGerm)
-fakedata3$DishNum<-as.character(fakedata3$DishNum)
-fakedata3$PropGerm<-as.character(fakedata3$PropGerm) 
-fakedata3$CumPropGerm<-as.character(fakedata3$CumPropGerm)
-fakedata3$type<-as.character(fakedata3$type) 
+fakedata1$DaysToGerm<-as.character(fakedata1$DaysToGerm)
+fakedata1$DishNum<-as.character(fakedata1$DishNum)
+fakedata1$PropGerm<-as.character(fakedata1$PropGerm) 
+fakedata1$CumPropGerm<-as.character(fakedata1$CumPropGerm)
+fakedata1$type<-as.character(fakedata1$type) 
 
 #put real data and fake data together
-germ_rate6<-germ_rate5%>%
+germ_rate1.2<-germ_rate1.1%>%
   mutate(type=c("real"))%>% #here we add a column to identify our real data
-  bind_rows(fakedata3) #now we add our fake data so that we have one dataframe with real and fake data (labeled, of course)
+  bind_rows(fakedata1) #now we add our fake data so that we have one dataframe with real and fake data (labeled, of course)
 
-#make a summary table  
-germ_rate7<-germ_rate6%>% 
-  group_by(type,DaysToGerm,PlotTreatment)%>% 
+germ_rate1.2$CumPropGerm<-as.numeric(germ_rate1.2$CumPropGerm)
+
+germ_rate1.2<-germ_rate1.2%>% 
+  group_by(type,DaysToGerm,PlotTreatment)%>%
   summarize(mean_CumPropGerm=mean(CumPropGerm,
                                na.rm=TRUE),
             sd_prop=sd(CumPropGerm,na.rm=TRUE),
-            se_prop=sd_prop/sqrt(40))
-  
-germ_rate7_gg<-ggplot(germ_rate7, #making a graph with ggplot
+            se_prop=sd_prop/sqrt(40))%>% 
+  mutate(DaysToGerm=as.numeric(DaysToGerm))
+ 
+germ_rate1.2_gg<-ggplot(germ_rate1.2, #making a graph with ggplot
                       aes(x=DaysToGerm, #variable for x-axis
-                          y=CumPropGerm, #variable for y-axis
+                          y=mean_CumPropGerm, #variable for y-axis
                           color=PlotTreatment, #how colors should be assigned
                           shape=PlotTreatment))+ #how shapes should be assigned
   geom_line(linewidth=0.5)+ #now we make the line
   geom_point(aes(size=type))+ #now we add the data points
-  #geom_errorbar( #and here are the error bars!
-#                aes(ymin=mean_CumPropGerm-se_prop,
-#                    ymax=mean_CumPropGerm+se_prop),
-#                width=0.2,size=0.5,
-#                position=position_dodge(width=0.5))+
+  geom_errorbar(aes(ymin=mean_CumPropGerm-se_prop,
+                    ymax=mean_CumPropGerm+se_prop),
+                width=0.2,
+                size=0.5,
+                color="gray58",
+                position=position_dodge(width=0.15,))+
   theme_bw(base_size=16)+ #theme and base_size is the font size for labels
   theme(panel.border=element_blank(),
         panel.grid.major=element_blank(),
@@ -265,18 +270,20 @@ germ_rate7_gg<-ggplot(germ_rate7, #making a graph with ggplot
   scale_size_manual(values=c(0,5), #second number controls the size of the point
                     guide="none")+
   scale_color_manual(values=c("gray85","gray85","forestgreen","forestgreen"))+ #colors assigned in order of the legend
-  labs(y="Proportion Germinated",
+  scale_shape_manual(values=c(19,17,19,17))+
+    labs(y="Proportion Germinated",
        fill="Source Habitat/Soil Type",
        color="Source Habitat/Soil Type",
        shape="Source Habitat/Soil Type")
-germ_rate7_gg
+germ_rate1.2_gg
 
-ggsave(plot=germ_rate7_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_rate7_gg.png",width=25,height=15,units="cm",dpi=800)
+#ggsave(plot=germ_rate1.2_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_rate1.2_gg.png",width=25,height=15,units="cm",dpi=800)
 ```
 
-##Proportion Germinated x Time with Habitat and Population
 
-```{r}
+##Proportion Germinated x Time with Habitat and Population - not used
+
+```{r eval=FALSE, include=FALSE}
 fakedata2<-unique(mydata[c("Population","Treatment")])%>%
   mutate(type="fake",DaysToGerm=0) #we want the graph to start at zero, but the data starts on day 2, so here we create fake data for the line to use
 
@@ -328,19 +335,18 @@ ggsave(plot=germ_rate2_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz
 ```
 
 ##Germination Success X Treatment and Habitat
-###Interaction Plot
-
+###Interaction Plot - both soils
 ```{r}
 pd<-position_dodge(0)
 
-germ_rate3<-mydata%>% 
+germ_rate3.0<-mydata%>% 
   group_by(Treatment,Habitat)%>%
   summarise(Mean=mean(PropGermDish),
             SD=sd(PropGermDish),
             N=length(PropGermDish))%>%
   mutate(SE=SD/sqrt(N))
 
-germ_int_all_gg<-ggplot(data=germ_rate3,
+germ_int3.0_gg<-ggplot(data=germ_rate3.0,
                         aes(x=factor(Treatment),
                             y=Mean,
                             shape=Habitat,
@@ -371,14 +377,93 @@ germ_int_all_gg<-ggplot(data=germ_rate3,
        fill="Source Habitat",
        color="Source Habitat",
        shape="Source Habitat")
-germ_int_all_gg
+germ_int3.0_gg
 
-ggsave(plot=germ_int_all_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_int_all_gg.png",width=25,height=15,units="cm",dpi=800)
+#ggsave(plot=germ_int3.0_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_int3.0_gg.png",width=25,height=15,units="cm",dpi=800)
+```
+###Boxplot
+
+```{r}
+germ_success3<-mydata%>% 
+  filter(DaysToGerm!=0)%>% 
+  #mutate(PlotTreatment=paste(Habitat,Treatment,sep="/"))%>% 
+  group_by(Habitat,Treatment)%>% 
+  count(DaysToGerm)%>% 
+  mutate(CumulativeSum=cumsum(n))%>% 
+  mutate(Proportion=CumulativeSum/400) 
+
+germ_success3_gg<-ggplot(germ_success3)+
+  geom_boxplot(aes(x=Treatment,y=Proportion),size=0.5)+
+  theme_classic(base_size=24)+
+  ylim(0,1)+
+  labs(y="Proportion Germinated",x="Treatment")
+germ_success3_gg
+
+ggsave(plot=germ_success3_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_success3_gg.png",width=20,height=15,units="cm",dpi=800)
+
+#Or using facet_grid
+germ_success3F_gg<-ggplot(germ_success3)+
+  geom_boxplot(aes(x=Habitat,y=Proportion),size=.5)+
+  theme_classic()+
+  ylim(0,1)+
+  scale_fill_manual(values=c("forestgreen","gray58"))+
+  labs(y="Proportion Germinated",x="Habitat")
+germ_success3F_gg
+
+ggsave(plot=germ_success3F_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_success3F_gg.png",width=20,height=15,units="cm",dpi=800)
+```
+
+###Interaction Plot - field soil only
+```{r}
+pd<-position_dodge(0)
+
+germ_rate3.1<-mydata%>% 
+  filter(Treatment=="Field Soil")%>%
+  group_by(Treatment,Habitat)%>%
+  summarise(Mean=mean(PropGermDish),
+            SD=sd(PropGermDish),
+            N=length(PropGermDish))%>%
+  mutate(SE=SD/sqrt(N))
+
+germ_int3.1_gg<-ggplot(data=germ_rate3.1,
+                        aes(x=factor(Treatment),
+                            y=Mean,
+                            shape=Habitat,
+                            group=Habitat,
+                            color=Habitat))+
+  ylab("Proportion Germinated")+
+  coord_cartesian(ylim=c(0,1))+
+  xlab("")+
+  theme_bw(base_size=16)+
+  theme(panel.border=element_blank(),
+        panel.grid.major=element_blank(),
+        panel.grid.minor=element_blank(),
+        axis.line=element_line(colour="black"),
+        legend.position = c(0.8, 0.4))+
+  scale_y_continuous(name="Proportion Germinated",
+                     limits=c(0,1),
+                     breaks=c(0.0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0))+
+  geom_line(size=1,
+            position=pd)+
+  geom_point(size=5,
+             position=pd)+
+  scale_color_manual(values=c("gray85","forestgreen"))+
+  geom_errorbar(width=0.15,
+                position=pd,
+                aes(ymin=(Mean-SE),
+                    ymax=(Mean+SE)))+
+  labs(y="Proportion Germinated",
+       fill="Source Habitat",
+       color="Source Habitat",
+       shape="Source Habitat")
+germ_int3.1_gg
+
+#ggsave(plot=germ_int3.1_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_int3.1_gg.png",width=25,height=15,units="cm",dpi=800)
 ```
 
 ###Boxplot
 
-```{r eval=FALSE, include=FALSE}
+```{r}
 germ_success1<-mydata%>% 
   filter(DaysToGerm!=0)%>% 
   mutate(PlotTreatment=paste(Habitat,Treatment,sep="/"))%>% 
@@ -407,7 +492,7 @@ germ_success1F_gg<-ggplot(germ_success1)+
   labs(y="Proportion Germinated",fill="Habitat",x="Treatment")
 germ_success1F_gg
 
-ggsave(plot=germ_success1F_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_success1F_gg.png",width=20,height=20,units="cm",dpi=800)
+#ggsave(plot=germ_success1F_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_success1F_gg.png",width=20,height=20,units="cm",dpi=800)
 ```
 
 ##Germination Success x Treatment and Population
@@ -458,12 +543,12 @@ germ_int_site_gg<-ggplot(data=mydata_site_sum,
                     ymax=(Mean+SE)))
 germ_int_site_gg
 
-ggsave(plot=germ_int_site_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_int_site_gg.png",width=25,height=15,units="cm",dpi=800)
+#ggsave(plot=germ_int_site_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_int_site_gg.png",width=25,height=15,units="cm",dpi=800)
 ```
 
 ###Boxplot
 Not using
-```{r eval=FALSE, include=FALSE}
+```{r}
 germ_success2<-mydata%>% 
   filter(DaysToGerm!= 0)%>% 
   mutate(PlotTreatment=paste(Habitat,Treatment,sep="/"))%>% 
@@ -485,7 +570,7 @@ germ_success2_gg<-ggplot(germ_success2)+
        x="Treatment")
 germ_success2_gg
 
-ggsave(plot=germ_success2_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_success2_gg.png",width=20,height=25,units="cm",dpi=800)
+#ggsave(plot=germ_success2_gg,file="/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/germ_success2_gg.png",width=20,height=25,units="cm",dpi=800)
 ```
 
 #Autoplot: Proportion Germinated
